--- a/README.qmd
+++ b/README.qmd
@@ -87,7 +87,7 @@ rate_data %>%
   xlim(c(0,500)) +
   xlab("7-day COVID-19 total cases per 100,000 people") +
   ylab(NULL) +
-  theme_minimal() +
+  theme_bw() +
   ggtitle("Distribution of county-level COVID-19 case rates, by state",
           subtitle = paste("Latest data:", max(rate_data$date)))
 
