--- a/README.qmd
+++ b/README.qmd
@@ -1,4 +1,7 @@
 ---
+on:
+  schedule:
+    - cron: '0 22 * * *'
 title: "Minnesota COVID Report"
 format: gfm
 execute: 
@@ -87,7 +90,7 @@ rate_data %>%
   xlim(c(0,500)) +
   xlab("7-day COVID-19 total cases per 100,000 people") +
   ylab(NULL) +
-  theme_bw() +
+  theme_minimal() +
   ggtitle("Distribution of county-level COVID-19 case rates, by state",
           subtitle = paste("Latest data:", max(rate_data$date)))
 
